--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -1,6 +1,6 @@
 @misc{schwerbehindertenstatistik2017,
 	  author={{Statistisches Bundesamt}},
-		title={Statistik der schwerbehinderten {M}enschen},
+		title={Statistik der schwerbehinderten {{M}}enschen},
 url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte-Menschen/Publikationen/Downloads-Behinderte-Menschen/sozial-schwerbehinderte-kb-5227101179004.pdf?__blob=publicationFile&v=5},
 	year={2018}
 	}
@@ -153,7 +153,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	address = {San Diego},
 	author = {Lillo-Martin, Diane},
 	school = {University of California},
-	title = {Parameter setting: {{{E}}}vidence from use, acquisition, and breakdown in {{American}} {Sign} {Language}},
+	title = {Parameter setting: {{E}}vidence from use, acquisition, and breakdown in {{American}} {Sign} {Language}},
 	year = {1986}
 }
 
@@ -161,7 +161,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	address = {Stanford},
 	author = {Tonhauser, Judith},
 	school = {Stanford University},
-	title = {The temporal semantics of noun phrases: {{{E}}}vidence from Guaraní},
+	title = {The temporal semantics of noun phrases: {{E}}vidence from Guaraní},
 	year = {2006}
 }
 
@@ -257,7 +257,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	address = {Cambridge},
 	author = {Abney, Steven Paul},
 	school = {Massachusetts Institute of Technology},
-	title = {The {{{E}}}nglish noun phrase in its sentential aspect},
+	title = {The {{E}}nglish noun phrase in its sentential aspect},
 	year = {1987}
 }
 
@@ -385,7 +385,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 @misc{fischer1998feature,
 	author = {Fischer, Susan and Osugi, Yutaka},
 	howpublished = {Poster presented at the 6th International Conference on Theoretical Issues in Sign Language Research},
-	title = {Feature movement in wh-questions: {{{E}}}vidence from sign languages},
+	title = {Feature movement in wh-questions: {{E}}vidence from sign languages},
 	year = {1998}
 }
 
@@ -482,7 +482,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 }
 
 @inproceedings{von2007differential,
-	author = {Heusinger, Klaus von and Kaiser, Georg},
+	author = {von Heusinger, Klaus and Kaiser, Georg},
 	booktitle = {{Proceedings of the Workshop Definiteness, Specificity and Animacy in {Ibero-{Romance}} Languages}},
 	pages = {85--110},
 	title = {Differential object marking and the lexical semantics of verbs in {{Spanish}}},
@@ -490,7 +490,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 }
 
 @inproceedings{von2005evolution,
-	author = {Heusinger, Klaus von and Kaiser, Georg},
+	author = {von Heusinger, Klaus and Kaiser, Georg},
 	booktitle = {{Proceedings of the Workshop: {{S}}pecificity and the Evolution/Emergence of Nominal Determination Systems in {Romance}}},
 	pages = {33--69},
 	title = {The evolution of differential object marking in {{Spanish}}},
@@ -526,7 +526,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 
 @inproceedings{schmerling1982imperatives,
 	author = {Schmerling, Susan},
-	booktitle = {Papers from the Parasession on Nondeclaratives, {Chicago} {L}inguistic {S}ociety},
+	booktitle = {Papers from the Parasession on Nondeclaratives, {Chicago} {{L}}inguistic {{S}}ociety},
 	pages = {202--218},
 	publisher = {University of Chicago, Chicago Linguistic Society Chicago},
 	title = {How imperatives are special, and how they aren't},
@@ -551,7 +551,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 
 @inproceedings{potsdam1999syntax,
 	author = {Potsdam, Eric},
-	booktitle = {The proceedings of the 1998 {W}estern {C}onference on {L}inguistics ({WECOL}98)},
+	booktitle = {The proceedings of the 1998 {{W}}estern {{C}}onference on {{L}}inguistics ({WECOL}98)},
 	pages = {397--411},
 	title = {A syntax for adverbs},
 	year = {1999}
@@ -579,7 +579,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	booktitle = {Proceedings of the Thirty-Fifth Annual Meeting of the {North} {East} Linguistic Society},
 	number = {2},
 	pages = {507--521},
-	title = {Relative clauses in {{German}} {Sign} {Language}: {{{E}}}xtraposition and reconstruction},
+	title = {Relative clauses in {{German}} {Sign} {Language}: {{E}}xtraposition and reconstruction},
 	volume = {35},
 	year = {2005}
 }
@@ -619,7 +619,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 
 @inproceedings{lillo2006position,
 	author = {Lillo-Martin, Diane and {de Quadros}, Ronice M{ü}ller},
-	booktitle = {{The Proceedings of the Inaugural Conference on Generative Approaches to Language Acquisition ({{{U}}}niversity of {{C}}onneticut {{O}}ccasional {{P}}apers in {{L}}inguistics 4)}},
+	booktitle = {{The Proceedings of the Inaugural Conference on Generative Approaches to Language Acquisition ({{U}}niversity of {{C}}onneticut {{O}}ccasional {{P}}apers in {{L}}inguistics 4)}},
 	pages = {195--203},
 	title = {The position of early {{{WH}}-elements} in {{American}} {Sign} {Language} and {{Brazilian}} {Sign} {Language}},
 	year = {2006}
@@ -736,7 +736,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 
 @inproceedings{caponigro2007rhetorical,
 	author = {Caponigro, Ivano and Sprouse, Jon},
-	booktitle = {Proceedings of {S}inn und {Bedeutung}},
+	booktitle = {Proceedings of {{S}}inn und {Bedeutung}},
 	organization = {Universitat Pompeu Fabra Barcelona},
 	pages = {121--133},
 	title = {Rhetorical questions as questions},
@@ -747,7 +747,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 @inproceedings{bhatt1996object,
 	author = {Bhatt, Rajesh and Anagnostopoulou, Elena},
 	booktitle = {Papers from the 32nd Regional Meeting of the {Chicago} Linguistics Society},
-	title = {Object shift and specificity: {{{E}}}vidence from ko-phrases in {{Hindi}}},
+	title = {Object shift and specificity: {{E}}vidence from ko-phrases in {{Hindi}}},
 	volume = {1122},
 	year = {1996}
 }
@@ -821,7 +821,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 @incollection{zanuttini1996on,
 	address = {New York},
 	author = {Zanuttini, Raffaella},
-	booktitle = {Parameters and Functional Heads: {{{E}}}ssays in Comparative Syntax},
+	booktitle = {Parameters and Functional Heads: {{E}}ssays in Comparative Syntax},
 	editor = {Belletti, Adriana and Rizzi, Luigi},
 	pages = {181--207},
 	publisher = {Oxford University Press},
@@ -921,7 +921,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 @incollection{wilbur2000phonological,
 	address = {Mahwah},
 	author = {Wilbur, Ronnie},
-	booktitle = {The signs of language revisited: {{A}}n anthology to honor {Ursula} {Bellugi} and {E}dward {Klima}},
+	booktitle = {The signs of language revisited: {{A}}n anthology to honor {Ursula} {Bellugi} and {{E}}dward {Klima}},
 	editor = {Emmorey, Karen and Lane, Harlan},
 	pages = {215--244},
 	publisher = {Lawrence Erlbaum Associates},
@@ -1050,7 +1050,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	editor = {Stolterfoht, Britta and Featherston, Sam},
 	pages = {115--146},
 	publisher = {de Gruyter},
-	title = {Crosslinguistic variation in comparison: {{{E}}}vidence from child language acquisition},
+	title = {Crosslinguistic variation in comparison: {{E}}vidence from child language acquisition},
 	year = {2012}
 }
 
@@ -1192,7 +1192,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 @incollection{schwagerzeshan2010,
 	address = {Amsterdam \& Philadelphia},
 	author = {Schwager, Waldemar and Zeshan, Ulrike},
-	booktitle = {Parts of Speech: {{{E}}}mpirical and theoretical advances},
+	booktitle = {Parts of Speech: {{E}}mpirical and theoretical advances},
 	editor = {Ansaldo, Umberto and Don, Jan and Pfau, Roland},
 	pages = {5--41},
 	publisher = {John Benjamins},
@@ -1249,7 +1249,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 @incollection{rupp2007inverted,
 	address = {Amsterdam},
 	author = {Rupp, Laura},
-	booktitle = {Imperative Clauses in Generative Grammar: {{S}}tudies Offered to {F}rits {B}eukema},
+	booktitle = {Imperative Clauses in Generative Grammar: {{S}}tudies Offered to {{F}}rits {{B}}eukema},
 	editor = {van der Wurff, Wim},
 	pages = {297--322},
 	publisher = {John Benjamins},
@@ -1304,7 +1304,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 @incollection{rizzi2001position,
 	address = {Amsterdam},
 	author = {Rizzi, Luigi},
-	booktitle = {Current studies in {Italian} syntax: {{{E}}}ssays Offered to {L}orenzo {R}enzi},
+	booktitle = {Current studies in {Italian} syntax: {{E}}ssays Offered to {{L}}orenzo {{R}}enzi},
 	editor = {Cinque, Guglielmo and Salvi, Giampaolo},
 	pages = {267--296},
 	publisher = {Elsevier},
@@ -1326,7 +1326,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 @incollection{rizzi1996residual,
 	address = {New York},
 	author = {Rizzi, Luigi},
-	booktitle = {Parameters and Functional Heads: {{{E}}}ssays in Comparative Syntax},
+	booktitle = {Parameters and Functional Heads: {{E}}ssays in Comparative Syntax},
 	editor = {Belleti, Andrea and Rizzi, Luigi},
 	pages = {63--90},
 	publisher = {Oxford University Press},
@@ -1359,7 +1359,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 @incollection{potsdam2007analysing,
 	address = {Amsterdam \& Philadelpia},
 	author = {Potsdam, Eric},
-	booktitle = {Imperative Clauses in Generative Grammar: {{S}}tudies Offered to {F}rits {B}eukema},
+	booktitle = {Imperative Clauses in Generative Grammar: {{S}}tudies Offered to {{F}}rits {{B}}eukema},
 	editor = {{van der Wurff}, Wim},
 	pages = {251--272},
 	publisher = {John Benjamins},
@@ -1436,7 +1436,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 @incollection{pfau2016featural,
 	address = {Heidelberg},
 	author = {Pfau, Roland},
-	booktitle = {Negation and polarity: {{{E}}}xperimental perspectives},
+	booktitle = {Negation and polarity: {{E}}xperimental perspectives},
 	editor = {Larrivée, Pierre and Lee, Chungmin},
 	pages = {45--74},
 	publisher = {Springer},
@@ -1517,7 +1517,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	editor = {Anderssen, Merete and Bentzen, Kristine and Westergaard, Marit},
 	pages = {207--240},
 	publisher = {Springer},
-	title = {Optional scrambling is not random: {{{E}}}vidence from {{E}nglish-{Ukrainian}} acquisition},
+	title = {Optional scrambling is not random: {{E}}vidence from {{{E}}nglish-{Ukrainian}} acquisition},
 	year = {2011}
 }
 
@@ -1536,7 +1536,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 @incollection{moro2003notes,
 	address = {Amsterdam \& Philadelphia},
 	author = {Moro, Andrea},
-	booktitle = {{{Romance}} Languages and Linguistic Theory 2001. {{S}}elected Papers from {`Going {{Romance}}'}: {{A}}msterdam, 6---8 {D}ecember 2001},
+	booktitle = {{{Romance}} Languages and Linguistic Theory 2001. {{S}}elected Papers from {`Going {{Romance}}'}: {{A}}msterdam, 6---8 {{D}}ecember 2001},
 	editor = {Quer, Josep and Schroten, Jan and Scorretti, Mauro and Sleeman, Petra and Verheugd-Daatzelaar, Els},
 	pages = {247---262},
 	publisher = {John Benjamins},
@@ -1547,7 +1547,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 @incollection{morimoto2006language,
 	address = {Amsterdam},
 	author = {Morimoto, Yukiko and {de Swart}, Peter},
-	booktitle = {{{Romance}} Languages and Linguistic Theory 2004. {{S}}elected papers from {`Going {{Romance}}'}, {{L}}eiden, 9--11 {D}ecember 2004},
+	booktitle = {{{Romance}} Languages and Linguistic Theory 2004. {{S}}elected papers from {`Going {{Romance}}'}, {{L}}eiden, 9--11 {{D}}ecember 2004},
 	editor = {Doetjes, Jenny and González, Paz},
 	pages = {225--245},
 	publisher = {John Benjamins},
@@ -1574,7 +1574,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	editor = {{van Craenenbroeck}, Jeroen},
 	pages = {201--254},
 	publisher = {John Benjamins},
-	title = {{E}videntials as epistemic modals: {{{E}}}vidence from {St'át'imcets}},
+	title = {{{E}}videntials as epistemic modals: {{E}}vidence from {St'át'imcets}},
 	year = {2007}
 }
 
@@ -1683,7 +1683,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	address = {Berlin \& New York},
 	author = {Kratzer, Angelika},
 	booktitle = {Semantics: {{A}}n international handbook of contemporary research},
-	editor = {Stechow, Armin von and Wunderlich, Dieter},
+	editor = {von Stechow, Armin and Wunderlich, Dieter},
 	pages = {639--650},
 	publisher = {Walter de Gruyter},
 	title = {Modality},
@@ -1742,7 +1742,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	editor = {Cinque, Guglielmo and Kayne, Richard Stanley},
 	pages = {3--69},
 	publisher = {Oxford University Press},
-	title = {Some notes on comparative syntax, with special reference to {{{E}}}nglish and {{F}}rench},
+	title = {Some notes on comparative syntax, with special reference to {{E}}nglish and {{F}}rench},
 	year = {2005}
 }
 
@@ -1797,7 +1797,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	editor = {Brentari, Diane},
 	pages = {121--137},
 	publisher = {Lawrence Erlbaum Associates},
-	title = {Typological and modality constraints on borrowing: {{{E}}}xamples from the {{S}}ign {{L}}anguage of the {{N}}etherlands},
+	title = {Typological and modality constraints on borrowing: {{E}}xamples from the {{S}}ign {{L}}anguage of the {{N}}etherlands},
 	year = {2014}
 }
 
@@ -1817,7 +1817,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	address = {Berlin},
 	author = {Hinterwimmer, Stefan},
 	booktitle = {Semantics: {{A}}n International Handbook of Natural Language Meaning},
-	editor = {Heusinger, Klaus von and Maienborn, Claudia and Portner, Paul},
+	editor = {von Heusinger, Klaus and Maienborn, Claudia and Portner, Paul},
 	pages = {1875--1908},
 	publisher = {de Gruyter},
 	title = {Information structure and truth conditional semantics},
@@ -1896,7 +1896,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 @incollection{guentcheva1996tro,
 	address = {Louvain \& Paris},
 	author = {Guentchéva, Zlatka},
-	booktitle = {{L'{{{E}}}nconcation} {Médiatisée}},
+	booktitle = {{L'{{E}}nconcation} {Médiatisée}},
 	editor = {Guentchéva, Zlatka},
 	pages = {11--18},
 	publisher = {Peeters},
@@ -1933,7 +1933,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	address = {Berlin \& New York},
 	author = {Grewendorf, G{ü}nther and Zaefferer, Dietmar},
 	booktitle = {Semantics: {{A}}n International Handbook of Contemporary Research},
-	editor = {von Stechow, Armin von and Wunderlich, Dieter},
+	editor = {von Stechow, Armin and Wunderlich, Dieter},
 	pages = {270--286},
 	publisher = {Walter de Gruyter},
 	sortname = {Grewendorf, G{u}nther and Zaefferer, Dietmar},
@@ -1971,7 +1971,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	editor = {De Cesare, Anna-Maria},
 	pages = {377--414},
 	publisher = {Walter de Gruyter},
-	title = {Motivating w(h)-clefts in {{{E}}}nglish and {{G}}erman: {{A}} hypothesis-driven parallel corpus study},
+	title = {Motivating w(h)-clefts in {{E}}nglish and {{G}}erman: {{A}} hypothesis-driven parallel corpus study},
 	year = {2014}
 }
 
@@ -1993,7 +1993,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	editor = {Frege, Gottlob},
 	pages = {58--77},
 	publisher = {Verlag der Kenserschen Buchhandlung},
-	title = {Der {Gedanke}: {{{E}}}ine logische {{Untersuchung}}},
+	title = {Der {Gedanke}: {{E}}ine logische {{Untersuchung}}},
 	volume = {1},
 	year = {1918/1919}
 }
@@ -2036,7 +2036,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	address = {Amsterdam},
 	author = {Fanselow, Gisbert and Mahajan, Anoop},
 	booktitle = {{Wh}-Scope Marking},
-	editor = {Lutz, Uli and Müller, Gereon and {von Stechow}, Arnim},
+	editor = {Lutz, Uli and Müller, Gereon and von Stechow, Arnim},
 	pages = {195--230},
 	publisher = {John Benjamins},
 	title = {Towards a minimalist theory of wh-expletives, wh-copying, and successive cyclicity},
@@ -2162,7 +2162,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 @incollection{cinque1998restructuring,
 	address = {Amsterdam},
 	author = {Cinque, Guglielmo},
-	booktitle = {Current studies in {Italian} syntax: {E}ssays offered to {L}orenzo {R}enzi},
+	booktitle = {Current studies in {Italian} syntax: {{E}}ssays offered to {{L}}orenzo {{R}}enzi},
 	editor = {Cinque, Guglielmo and Salvi, Giampaolo},
 	pages = {137--155},
 	publisher = {Elsevier},
@@ -2173,7 +2173,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 @incollection{cinque1994evidence,
 	address = {Washington},
 	author = {Cinque, Guglielmo},
-	booktitle = {Paths towards {{{U}}}niversal {{G}}rammar: {{{E}}}ssays in honor of {{R}}ichard {{K}}ayne},
+	booktitle = {Paths towards {{U}}niversal {{G}}rammar: {{E}}ssays in honor of {{R}}ichard {{K}}ayne},
 	editor = {Cinque, Guglielmo and Koster, Jan and Pollock, Jean-Yves and Rizzi, Luigi and Zanuttini, Raffaella},
 	pages = {85--110},
 	publisher = {Georgetown University Press},
@@ -2195,7 +2195,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 @incollection{chomsky2000minimalist,
 	address = {Cambridge},
 	author = {Chomsky, Noam},
-	booktitle = {Step by step: {{{E}}}ssays on minimalist syntax in honor of {Howard Lasnik}},
+	booktitle = {Step by step: {{E}}ssays on minimalist syntax in honor of {Howard Lasnik}},
 	editor = {Martin, Roger and Michaels, David and Uriagereka, Juan and Keyser, Samuel Jay},
 	pages = {89--155},
 	publisher = {MIT press},
@@ -2285,7 +2285,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 @incollection{bossong1991differential,
 	address = {Amsterdam},
 	author = {Bossong, Georg},
-	booktitle = {New Analyses in {{R}}omance linguistics: {{S}}elected Papers from the {{XVIII}} {{L}}inguistic {{S}}ymposium on {{R}}omance {{L}}anguages, {{{U}}}rbana-{{C}}hampaign, {April} 7--9, 1988},
+	booktitle = {New Analyses in {{R}}omance linguistics: {{S}}elected Papers from the {{XVIII}} {{L}}inguistic {{S}}ymposium on {{R}}omance {{L}}anguages, {{U}}rbana-{{C}}hampaign, {April} 7--9, 1988},
 	editor = {Wanner, Dieter and Kibbee, Douglas},
 	pages = {143--170},
 	publisher = {John Benjamins},
@@ -2296,7 +2296,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 @incollection{bergmandahl1994,
 	address = {Berlin},
 	author = {Bergman, Brita and Dahl, {Ö}sten},
-	booktitle = {Tense, aspect and action: {{{E}}}mpirical and theoretical contributions to language typology},
+	booktitle = {Tense, aspect and action: {{E}}mpirical and theoretical contributions to language typology},
 	editor = {Bache, Carl and Basbøll, Hans and Lindberg, Carl-Erik},
 	pages = {397--422},
 	publisher = {Mouton de Gruyter},
@@ -2321,7 +2321,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 @incollection{beninca2001position,
 	address = {Amsterdam},
 	author = {Benincà, Paola},
-	booktitle = {Current studies in {{Italian}} syntax: {{{E}}}ssays offered to {Lorenzo} {Renzi}},
+	booktitle = {Current studies in {{Italian}} syntax: {{E}}ssays offered to {Lorenzo} {Renzi}},
 	editor = {Cinque, Guglielmo and Salvi, Giampaolo},
 	pages = {39--64},
 	publisher = {Elsevier},
@@ -2333,7 +2333,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 @incollection{belletti2003i,
 	address = {Oxford},
 	author = {Belletti, Adriana},
-	booktitle = {Subject inversion in {{Romance}} and the theory of {{{U}}}niversal {{G}}rammar},
+	booktitle = {Subject inversion in {{Romance}} and the theory of {{U}}niversal {{G}}rammar},
 	editor = {Hulk, Aafke and Pollock, Jean-Yves},
 	pages = {60--90},
 	publisher = {Oxford University Press},
@@ -2679,7 +2679,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 
 @book{papaspyrou2008grammatik,
 	address = {Seedorf},
-	author = {Papaspyrou, Chrissostomos and Meyenn, Alexander von and Matthaei, Michaela and Herrmann, Bettina},
+	author = {Papaspyrou, Chrissostomos and von Meyenn, Alexander and Matthaei, Michaela and Herrmann, Bettina},
 	publisher = {Signum},
 	title = {{Grammatik} der deutschen {Geb{ä}rdensprache} aus der {{S}}icht geh{ö}rloser {Fachleute}},
 	year = {2008}
@@ -2754,7 +2754,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	address = {Hamburg},
 	author = {Metzger, Christiane},
 	publisher = {Signum},
-	title = {Zeitlinien und temporale {{G}}ebärden in der {{D}}eutschen {{G}}ebärdensprache: {{{E}}}ine empirische {{{U}}}ntersuchung},
+	title = {Zeitlinien und temporale {{G}}ebärden in der {{D}}eutschen {{G}}ebärdensprache: {{E}}ine empirische {{U}}ntersuchung},
 	year = {2009}
 }
 
@@ -2945,7 +2945,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	address = {Cambridge},
 	author = {Jackendoff, Ray S},
 	publisher = {MIT Press},
-	title = {{\={X}}-syntax: {{A}} Study of Phrase Structure},
+	title = {{\={{X}}}-syntax: {{A}} Study of Phrase Structure},
 	year = {1977}
 }
 
@@ -3020,7 +3020,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	author = {Happ, Daniela and Vorköper, Marc-Oliver},
 	publisher = {Fachhochschulverlag},
 	sortname = {Happ, Daniela and Vorkoper, Marc-Oliver},
-	title = {{Deutsche} {Gebärdensprache}: {{{E}}}in {Lehr-} und {{Arbeitsbuch}}},
+	title = {{Deutsche} {Gebärdensprache}: {{E}}in {Lehr-} und {{Arbeitsbuch}}},
 	year = {2014}
 }
 
@@ -3029,7 +3029,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	author = {Hänel, Barbara},
 	publisher = {Gunter Narr},
 	sortname = {Hanel, Barbara},
-	title = {Der {{{{E}}}}rwerb der {{D}}eutschen {{G}}ebärdensprache als {{{{E}}}}rstsprache: {{D}}ie frühkindliche {{S}}prachentwicklung von {{S}}ubjekt- und {{O}}bjektverbkongruenz in {{DGS}}},
+	title = {Der {{E}}rwerb der {{D}}eutschen {{G}}ebärdensprache als {{E}}rstsprache: {{D}}ie frühkindliche {{S}}prachentwicklung von {{S}}ubjekt- und {{O}}bjektverbkongruenz in {{DGS}}},
 	year = {2014}
 }
 
@@ -3109,7 +3109,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	address = {Brussels},
 	author = {Wheatley, Mark and Pabsch, Annika},
 	publisher = {European Union of the Deaf},
-	title = {Sign Language Legislation in the  {{{E}}}uropean {{{U}}}nion},
+	title = {Sign Language Legislation in the  {{E}}uropean {{U}}nion},
 	year = {2012}
 }
 
@@ -3134,7 +3134,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	author = {Dümig, Sascha and Leuninger, Helen},
 	publisher = {Schulz-Kirchner},
 	sortname = {Dumig, Sascha and Leuninger, Helen},
-	title = {Phonologie der {{L}}aut- und {{G}}ebärdensprache: {{L}}inguistische {{G}}rundlagen, {{{E}}}rwerb, sprachtherapeutische {{P}}erspektiven},
+	title = {Phonologie der {{L}}aut- und {{G}}ebärdensprache: {{L}}inguistische {{G}}rundlagen, {{E}}rwerb, sprachtherapeutische {{P}}erspektiven},
 	year = {2013}
 }
 
@@ -3176,7 +3176,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	address = {Oxford},
 	author = {Dahl, {Ö}sten},
 	publisher = {Blackwell},
-	sortname = {Dahl, {O}sten},
+	sortname = {Dahl, {{O}}sten},
 	title = {Tense and aspect systems},
 	year = {1985}
 }
@@ -3340,7 +3340,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	address = {Hamburg},
 	author = {{Boyes Braem}, Penny},
 	publisher = {Signum},
-	title = {{{E}inführung} in die {{G}}ebärdensprache und ihre {{{E}}}rforschung},
+	title = {{{{E}}inführung} in die {{G}}ebärdensprache und ihre {{E}}rforschung},
 	year = {1990}
 }
 
@@ -3381,7 +3381,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	address = {Heidelberg},
 	author = {Behaghel, Otto},
 	publisher = {Carl Winters Universitätsbuchhandlung},
-	title = {{Deutsche} {{S}}yntax. {{{E}}}ine geschichtliche {{D}}arstellung},
+	title = {{Deutsche} {{S}}yntax. {{E}}ine geschichtliche {{D}}arstellung},
 	volume = {4},
 	year = {1932}
 }
@@ -3515,7 +3515,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	number = {1},
 	pages = {185--218},
 	publisher = {Springer},
-	title = {{E}ncoding the addressee in the syntax: {{{E}}}vidence from {{E}nglish} imperative subjects},
+	title = {{{E}}ncoding the addressee in the syntax: {{E}}vidence from {{{E}}nglish} imperative subjects},
 	volume = {26},
 	year = {2008}
 }
@@ -3660,7 +3660,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 }
 
 @article{von2011affectedness,
-	author = {Heusinger, Klaus von and Kaiser, Georg},
+	author = {von Heusinger, Klaus and Kaiser, Georg},
 	journal = {Morphology},
 	number = {3-4},
 	pages = {593--617},
@@ -3975,7 +3975,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	author = {Rathmann, Christian Georg},
 	journal = {Texas Linguistics Forum},
 	pages = {181--192},
-	title = {The optionality of agreement phrase: {{{E}}}vidence from {{German}} {Sign} {Language} {({DGS})}},
+	title = {The optionality of agreement phrase: {{E}}vidence from {{German}} {Sign} {Language} {({DGS})}},
 	volume = {53},
 	year = {2003},
 }
@@ -4093,7 +4093,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	number = {1},
 	pages = {129--161},
 	publisher = {Mouton de Gruyter},
-	title = {The grammar of headshake: {{A}} typological perspective on {{G}}erman {{S}}ign {L}anguage negation},
+	title = {The grammar of headshake: {{A}} typological perspective on {{G}}erman {{S}}ign {{L}}anguage negation},
 	volume = {1},
 	year = {2007}
 }
@@ -4112,7 +4112,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	issue = {1},
 	journal = {Language},
 	pages = {18--57},
-	title = {{WH}-movement and the position of {Spec-}{{CP}}: {{{E}}}vidence from {{American}} {Sign} {Language}},
+	title = {{WH}-movement and the position of {Spec-}{{CP}}: {{E}}vidence from {{American}} {Sign} {Language}},
 	volume = {73},
 	year = {1997}
 }
@@ -4133,7 +4133,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	author = {{Ö}zsoy, Sumru and Kelepir, Meltem and Nubalaoğlu, Derya and Hakgüder, Emre},
 	journal = {Gengo Kenkyu},
 	pages = {1--18},
-	sortname = {{O}zsoy, SA and Kelepir, M and Nubalaoglu, D and Hakguder, E},
+	sortname = {{{O}}zsoy, SA and Kelepir, M and Nubalaoglu, D and Hakguder, E},
 	title = {Commands in {{Turkish}} {Sign} {Language}},
 	volume = {146},
 	year = {2014}
@@ -4294,7 +4294,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	number = {4},
 	pages = {709--753},
 	publisher = {Springer},
-	title = {Parameters for wh-movement types: {{{E}}}vidence from child {{E}nglish}},
+	title = {Parameters for wh-movement types: {{E}}vidence from child {{{E}}nglish}},
 	volume = {13},
 	year = {1995}
 }
@@ -4524,7 +4524,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	number = {1},
 	pages = {1--37},
 	publisher = {Taylor \& Francis},
-	title = {Crosslinguistic/crossmodal syntactic consequences of left-hemisphere damage: {{{E}}}vidence from an aphasic signer and his identical twin},
+	title = {Crosslinguistic/crossmodal syntactic consequences of left-hemisphere damage: {{E}}vidence from an aphasic signer and his identical twin},
 	volume = {11},
 	year = {1997}
 }
@@ -4566,7 +4566,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	journal = {Working Papers in Scandinavian Syntax},
 	pages = {163--185},
 	publisher = {Department of Scandinavian Languages, Lund University},
-	title = {In favour of a truncated imperative clause structure: {{{E}}}vidence from adverbs},
+	title = {In favour of a truncated imperative clause structure: {{E}}vidence from adverbs},
 	volume = {80},
 	year = {2007}
 }
@@ -4697,7 +4697,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	number = {4},
 	pages = {317--339},
 	publisher = {Wiley Online Library},
-	title = {Conditional clauses: {{{E}}}xternal and internal syntax},
+	title = {Conditional clauses: {{E}}xternal and internal syntax},
 	volume = {18},
 	year = {2003}
 }
@@ -4937,7 +4937,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 }
 
 @article{crasbornkoijiros2012,
-	author = {Crasborn, Onno and {van der Kooij}, Els and Ros, Johan},
+	author = {Crasborn, Onno and van der Kooij, Els and Ros, Johan},
 	journal = {Sign Language \& Linguistics},
 	number = {1},
 	pages = {11--38},
@@ -4948,7 +4948,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 }
 
 @article{crasborn2013phonology,
-	author = {Crasborn, Onno and {van der Kooij}, Els},
+	author = {Crasborn, Onno and van der Kooij, Els},
 	doi = {10.1017/S0022226713000054},
 	journal = {Journal of Linguistics},
 	number = {3},
@@ -5026,11 +5026,11 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 @incollection{cinque2001restructuring,
 	address = {Amsterdam},
 	author = {Cinque, Guglielmo},
-	booktitle = {Current studies in {I}talian syntax: {E}ssays offered to {L}orenzo {R}enzi},
+	booktitle = {Current studies in {{I}}talian syntax: {{E}}ssays offered to {{L}}orenzo {{R}}enzi},
 	editor = {Cinque, Guglielmo and Salvi, Giampaolo},
 	pages = {137--155},
 	publisher = {Elsevier},
-	title = {“{R}estructuring” and the order of aspectual and root modal heads},
+	title = {“{{R}}estructuring” and the order of aspectual and root modal heads},
 	year = {2001}
 }
 
@@ -5043,7 +5043,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	issue = {1},
 	journal = {Sign Language \& Linguistics},
 	pages = {9--48},
-	title = {Syntax and prosodic consequences in {{ASL}}. {{{E}}}vidence from multiple {{{WH}}}-questions},
+	title = {Syntax and prosodic consequences in {{ASL}}. {{E}}vidence from multiple {{{WH}}}-questions},
 	volume = {11},
 	year = {2011}
 }
@@ -5064,7 +5064,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 @incollection{chomsky1999derivation,
 	address = {Cambridge},
 	author = {Chomsky, Noam},
-	booktitle = {{Ken} {Hale}: {A} Life in Language},
+	booktitle = {{Ken} {Hale}: {{A}} Life in Language},
 	editor = {Kenstowicz, Michael},
 	pages = {1--52},
 	publisher = {MIT Press},
@@ -5167,7 +5167,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	number = {2},
 	pages = {105--130},
 	publisher = {John Benjamins},
-	title = {Prosody on the hands and face: {{{E}}}vidence from {{American}} {Sign} {Language}},
+	title = {Prosody on the hands and face: {{E}}vidence from {{American}} {Sign} {Language}},
 	volume = {5},
 	year = {2002}
 }
@@ -5196,7 +5196,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 }
 
 @article{boven2018throughaspect,
-	author = {{van Boven}, Cindy},
+	author = {van Boven, Cindy},
 	issue = {1},
 	journal = {Linguistics in Amsterdam},
 	pages = {1--21},
@@ -5210,7 +5210,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	journal = {Glossologia},
 	number = {3},
 	pages = {7--20},
-	title = {Animacy and markedness in {{{U}}}niversal {{G}}rammar},
+	title = {Animacy and markedness in {{U}}niversal {{G}}rammar},
 	volume = {2},
 	year = {1983--1984}
 }
@@ -5337,7 +5337,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 
 @inproceedings{alexeyenko2012manner,
 	author = {Alexeyenko, Sascha},
-	booktitle = {Proceedings of the 27th annual Meeting of the {I}srael {A}ssociation for {T}heoretical {L}inguistics},
+	booktitle = {Proceedings of the 27th annual Meeting of the {{I}}srael {{A}}ssociation for {{T}}heoretical {{L}}inguistics},
 	pages = {203--218},
 	title = {Manner modification in event semantics},
 	year = {2012}
@@ -5365,7 +5365,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	number = {3},
 	pages = {435--483},
 	publisher = {Springer},
-	title = {Differential object marking: {{I}}conicity vs. {{{E}}}conomy},
+	title = {Differential object marking: {{I}}conicity vs. {{E}}conomy},
 	volume = {21},
 	year = {2003}
 }
@@ -5397,7 +5397,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	title = {What's a wh-word got to do with it},
 	author = {Aboh, Enoch Oladé and Pfau, Roland},
 	sortname = {Aboh, Enoch Olade and Pfau, Roland},
-	booktitle={Mapping the left periphery: {T}he cartography of syntactic structures},
+	booktitle={Mapping the left periphery: {{T}}he cartography of syntactic structures},
 	publisher={Oxford University Press}, 
 	address={Oxford},
 	year={2010},
@@ -5466,7 +5466,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	@incollection{pfauquer2007syntaxofnegationandmodals,
 	title={On the syntax of negation and modals in {{G}}erman {{S}}ign {{L}}anguage ({DGS}) and {{C}}atalan {{S}}ign {{L}}anguage ({LSC})},
   author={Pfau, Roland and Quer, Josep},
-	booktitle={Visible variation: {C}omparative studies on sign language structure},
+	booktitle={Visible variation: {{C}}omparative studies on sign language structure},
 	publisher={Mouton de Gruyter}, 
 	address={Berlin},
 	year={2007},
@@ -5478,7 +5478,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
   title={Introduction},
   author={Fukui, Naoki and Zushi, Mihoko},
 	editor={Chomsky, Noam},
-  booktitle={The {Generative} enterprise revisited: Discussions with {R}iny {H}uybregts, {H}enk {van Riemsdijk}, {N}aoki {F}ukui and {M}ihoko {Z}ushi},
+  booktitle={The {Generative} enterprise revisited: Discussions with {{R}}iny {{H}}uybregts, {{H}}enk {van Riemsdijk}, {{N}}aoki {{F}}ukui and {{M}}ihoko {{Z}}ushi},
   pages={1--62},
   year={2004},
   publisher={Mouton de Gruyter},
