--- a/localcommands.tex
+++ b/localcommands.tex
@@ -6,3 +6,7 @@
 \renewcommand{\lsBackTitleFont}{\sffamily\addfontfeatures{Scale=MatchUppercase}\fontsize{20pt}{10mm}\selectfont}
 
 \renewcommand{\lsYear}{2020}
+
+
+\def\attop#1{\leavevmode\vtop{\strut\vskip-\baselineskip\vbox{#1}}}
+\def\atcenter#1{$\vcenter{#1}$}
