--- a/main.tex
+++ b/main.tex
@@ -21,7 +21,7 @@ colorlinks,citecolor=brown,
 \input{localcommands.tex} 
 \addbibresource{localbibliography.bib}
 
-\includeonly{chapters/05}
+% \includeonly{chapters/06}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %%%             Frontmatter                      %%% 
@@ -32,6 +32,7 @@ colorlinks,citecolor=brown,
 % \include{chapters/dedication}
 
 \currentpdfbookmark{Contents}{name} % adds a PDF bookmark
+
 {\sloppy\tableofcontents}
 
 \include{chapters/preface}
@@ -41,13 +42,6 @@ colorlinks,citecolor=brown,
 
 
 \mainmatter     
- 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-%%             Chapters                         %%% 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-
-
 
 %%%%%%The content of chapters/00 can be ignored
 % % \include{chapters/00}
@@ -58,13 +52,7 @@ colorlinks,citecolor=brown,
 \include{chapters/04}
 \include{chapters/05}
 \include{chapters/06}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-%%%             Backmatter                       %%% 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% \input{localseealso.tex} 
-% There is normally no need to change the backmatter section
-
-
+% \input{localseealso.tex}  
 {\sloppy\input{backmatter.tex}}
 \end{document}
