--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -181,13 +181,6 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	year = {1982}
 }
 
-@phdthesis{gijn2004quest,
-	address = {Amsterdam},
-	author = {Gijn, Ingeborg van},
-	school = {University of Amsterdam},
-	title = {The quest for syntactic dependency: {{S}}entential complementation in {{S}}ign {{L}}anguage of the {{N}}etherlands},
-	year = {2011}
-}
 
 @phdthesis{de1999phrase,
 	address = {Porto Alegre},
@@ -3073,13 +3066,14 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	year = {1984}
 }
 
-@book{gijn2004quest,
-	address = {Utrecht},
-	author = {Gijn, Ingeborg van},
-	publisher = {LOT},
-	title = {The quest for syntactic dependency. {{S}}entential complementation in {{S}}ign {{L}}anguage of the {{N}}etherlands},
-	year = {2004}
+@phdthesis{gijn2004quest,
+	address = {Amsterdam},
+	author = {van Gijn, Ingeborg},
+	school = {University of Amsterdam},
+	title = {The quest for syntactic dependency: {{S}}entential complementation in {{S}}ign {{L}}anguage of the {{N}}etherlands},
+	year = {2011}
 }
+
 
 @book{frawley1992linguistic,
 	address = {Hillsdale},
@@ -3312,21 +3306,6 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	year = {1934}
 }
 
-@book{brentari1998prosodic,
-	address = {Cambridge},
-	author = {Brentari, Diane},
-	publisher = {MIT Press},
-	title = {A prosodic model of sign language phonology},
-	year = {1998}
-}
-
-@book{brentari1998prosodic,
-	address = {Cambridge},
-	author = {Brentari, Diane},
-	publisher = {Mit Press},
-	title = {A prosodic model of sign language phonology},
-	year = {1998}
-}
 
 @book{branchini2014,
 	address = {Berlin},
@@ -4118,12 +4097,12 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 }
 
 @article{ozyurek2010locative,
-	author = {Özyürek, Asl\i and Zwitserlood, Inge and Perniss, Pamela},
+	author = {Özyürek, Aslı and Zwitserlood, Inge and Perniss, Pamela},
 	journal = {Linguistics},
 	number = {5},
 	pages = {1111--1145},
 	publisher = {Walter de Gruyter GmbH \& Co. KG},
-	sortname = {Ozyurek, Aslo and Zwitserlood, Inge and Perniss, Pamela},
+	sortname = {Ozyurek, Asli and Zwitserlood, Inge and Perniss, Pamela},
 	title = {Locative expressions in signed languages: {{A}} view from {{Turkish}} {Sign} {Language} {(TİD)}},
 	volume = {48},
 	year = {2010}
@@ -5148,6 +5127,15 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	title = {Scope-taking strategies and the order of clausal categories in {{German}} {Sign} {Language}},
 	volume = {2},
 	year = {2017}
+}
+
+
+@book{brentari1998prosodic,
+	address = {Cambridge},
+	author = {Brentari, Diane},
+	publisher = {MIT Press},
+	title = {A prosodic model of sign language phonology},
+	year = {1998}
 }
 
 @article{brentari2018production,
