--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,7 @@
 colorlinks,citecolor=brown,
 %  draft
 ,draftmode
-		  ]{langsci/langscibook}    
+		  ]{langsci/langscibook}     
   
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %%%          additional packages                 %%% 
@@ -21,7 +21,7 @@ colorlinks,citecolor=brown,
 \input{localcommands.tex} 
 \addbibresource{localbibliography.bib}
 
-% \includeonly{chapters/06}
+\includeonly{chapters/06}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 %%%             Frontmatter                      %%% 
