--- a/main.tex
+++ b/main.tex
@@ -7,9 +7,9 @@
 %% Example {bsp:advadvadvorderitalfrench} is very small; do you have an idea to make it more readable? :)
 
 \documentclass[output=book,nonflat,modfonts,
-colorlinks,citecolor=brown,
+% colorlinks,citecolor=brown,
 %  draft
-,draftmode
+% ,draftmode
 		  ]{langsci/langscibook}     
   
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
